@@ -1,3 +1,9 @@
+2017-07-20	"It was all so different before everything changed."  (3)
+
+		include/innocent-pear/rofl.h :
+		- may now invoke 32-bit ioctl(...) syscall on Linux/x86-64
+		- fixed typo
+
 2017-07-08	"It was all so different before everything changed."  (2)
 
 		include/innocent-pear/dawg.h :
